--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 Hello there, awesome person!
 Hello there, awesome person!
 	<html>
-	
+	   <head>
+        <title> My page </title>
+    </head>
 	  <body>
 	    Hello there, awesome person! 
 	  </body>
