--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 Hello there, awesome person!
-Hello there, awesome person!
 	<html>
 	   <head>
         <title> My page </title>
     </head>
 	  <body>
+		  <h1>I'm a header 1!</h1>
 	    Hello there, awesome person! 
 	  </body>
 	
