Added an avatar

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@ Hello there, awesome person!
 	<html>
 	   <head>
         <title> My page </title>
+		   <img src="https://avatars.githubusercontent.com/u/102825789?v=4">
     </head>
 	  <body>
 		  <h1>I'm a header 1!</h1>
