--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@ Hello there, awesome person!
     </head>
 	  <body>
 		  <h1>I'm a header 1!</h1>
-	    Hello there, awesome person! 
+	    <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
+		  <ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
 	  </body>
 	
 	</html>
