Edited the style of the webpage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ Hello there, awesome person!
 	   <head>
         <title> My page </title>
 		   <img src="https://avatars.githubusercontent.com/u/102825789?v=4">
+		    <head>
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
     </head>
 	  <body>
 		  <h1>I'm a header 1!</h1>
